crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_grid_table_planets.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..4049
  GRID_TABLE@0..4049
    TABLE_SEPARATOR@0..138
      TABLE_SEP_DELIM@0..1 "+"
      TABLE_SEP_DASHES@1..19 "------------------"
      TABLE_SEP_DELIM@19..20 "+"
      TABLE_SEP_DASHES@20..29 "---------"
      TABLE_SEP_DELIM@29..30 "+"
      TABLE_SEP_DASHES@30..42 "------------"
      TABLE_SEP_DELIM@42..43 "+"
      TABLE_SEP_DASHES@43..53 "----------"
      TABLE_SEP_DELIM@53..54 "+"
      TABLE_SEP_DASHES@54..65 "-----------"
      TABLE_SEP_DELIM@65..66 "+"
      TABLE_SEP_DASHES@66..76 "----------"
      TABLE_SEP_DELIM@76..77 "+"
      TABLE_SEP_DASHES@77..86 "---------"
      TABLE_SEP_DELIM@86..87 "+"
      TABLE_SEP_DASHES@87..98 "-----------"
      TABLE_SEP_DELIM@98..99 "+"
      TABLE_SEP_DASHES@99..112 "-------------"
      TABLE_SEP_DELIM@112..113 "+"
      TABLE_SEP_DASHES@113..121 "--------"
      TABLE_SEP_DELIM@121..122 "+"
      TABLE_SEP_DASHES@122..136 "--------------"
      TABLE_SEP_DELIM@136..137 "+"
      NEWLINE@137..138 "\n"
    TABLE_HEADER@138..552
      TEXT@138..275 "|                  |  ..."
      NEWLINE@275..276 "\n"
      TEXT@276..413 "|                  |  ..."
      NEWLINE@413..414 "\n"
      TEXT@414..551 "|                  |  ..."
      NEWLINE@551..552 "\n"
    TABLE_SEPARATOR@552..690
      TABLE_SEP_DELIM@552..553 "+"
      TABLE_SEP_COLON@553..554 ":"
      TABLE_SEP_EQUALS@554..561 "======="
      TABLE_SEP_COLON@561..562 ":"
      TABLE_SEP_DELIM@562..563 "+"
      TABLE_SEP_COLON@563..564 ":"
      TABLE_SEP_EQUALS@564..570 "======"
      TABLE_SEP_COLON@570..571 ":"
      TABLE_SEP_DELIM@571..572 "+"
      TABLE_SEP_EQUALS@572..581 "========="
      TABLE_SEP_DELIM@581..582 "+"
      TABLE_SEP_EQUALS@582..593 "==========="
      TABLE_SEP_COLON@593..594 ":"
      TABLE_SEP_DELIM@594..595 "+"
      TABLE_SEP_EQUALS@595..604 "========="
      TABLE_SEP_COLON@604..605 ":"
      TABLE_SEP_DELIM@605..606 "+"
      TABLE_SEP_EQUALS@606..616 "=========="
      TABLE_SEP_COLON@616..617 ":"
      TABLE_SEP_DELIM@617..618 "+"
      TABLE_SEP_EQUALS@618..627 "========="
      TABLE_SEP_COLON@627..628 ":"
      TABLE_SEP_DELIM@628..629 "+"
      TABLE_SEP_EQUALS@629..637 "========"
      TABLE_SEP_COLON@637..638 ":"
      TABLE_SEP_DELIM@638..639 "+"
      TABLE_SEP_EQUALS@639..649 "=========="
      TABLE_SEP_COLON@649..650 ":"
      TABLE_SEP_DELIM@650..651 "+"
      TABLE_SEP_EQUALS@651..663 "============"
      TABLE_SEP_COLON@663..664 ":"
      TABLE_SEP_DELIM@664..665 "+"
      TABLE_SEP_EQUALS@665..672 "======="
      TABLE_SEP_COLON@672..673 ":"
      TABLE_SEP_DELIM@673..674 "+"
      TABLE_SEP_EQUALS@674..688 "=============="
      TABLE_SEP_DELIM@688..689 "+"
      NEWLINE@689..690 "\n"
    TABLE_ROW@690..1932
      TEXT@690..827 "| Terrestrial      |  ..."
      NEWLINE@827..828 "\n"
      TEXT@828..965 "| planets          |  ..."
      NEWLINE@965..966 "\n"
      TEXT@966..1103 "|                  +- ..."
      NEWLINE@1103..1104 "\n"
      TEXT@1104..1241 "|                  |  ..."
      NEWLINE@1241..1242 "\n"
      TEXT@1242..1379 "|                  +- ..."
      NEWLINE@1379..1380 "\n"
      TEXT@1380..1517 "|                  |  ..."
      NEWLINE@1517..1518 "\n"
      TEXT@1518..1655 "|                  +- ..."
      NEWLINE@1655..1656 "\n"
      TEXT@1656..1793 "|                  |  ..."
      NEWLINE@1793..1794 "\n"
      TEXT@1794..1931 "|                  |  ..."
      NEWLINE@1931..1932 "\n"
    TABLE_SEPARATOR@1932..2070
      TABLE_SEP_DELIM@1932..1933 "+"
      TABLE_SEP_DASHES@1933..1942 "---------"
      TABLE_SEP_DELIM@1942..1943 "+"
      TABLE_SEP_DASHES@1943..1951 "--------"
      TABLE_SEP_DELIM@1951..1952 "+"
      TABLE_SEP_DASHES@1952..1961 "---------"
      TABLE_SEP_DELIM@1961..1962 "+"
      TABLE_SEP_DASHES@1962..1974 "------------"
      TABLE_SEP_DELIM@1974..1975 "+"
      TABLE_SEP_DASHES@1975..1985 "----------"
      TABLE_SEP_DELIM@1985..1986 "+"
      TABLE_SEP_DASHES@1986..1997 "-----------"
      TABLE_SEP_DELIM@1997..1998 "+"
      TABLE_SEP_DASHES@1998..2008 "----------"
      TABLE_SEP_DELIM@2008..2009 "+"
      TABLE_SEP_DASHES@2009..2018 "---------"
      TABLE_SEP_DELIM@2018..2019 "+"
      TABLE_SEP_DASHES@2019..2030 "-----------"
      TABLE_SEP_DELIM@2030..2031 "+"
      TABLE_SEP_DASHES@2031..2044 "-------------"
      TABLE_SEP_DELIM@2044..2045 "+"
      TABLE_SEP_DASHES@2045..2053 "--------"
      TABLE_SEP_DELIM@2053..2054 "+"
      TABLE_SEP_DASHES@2054..2068 "--------------"
      TABLE_SEP_DELIM@2068..2069 "+"
      NEWLINE@2069..2070 "\n"
    TABLE_ROW@2070..3312
      TEXT@2070..2071 "|"
      WHITESPACE@2071..2072 " "
      TABLE_CELL@2072..2078
        TEXT@2072..2078 "Jovian"
      WHITESPACE@2078..2080 "  "
      TEXT@2080..2081 "|"
      WHITESPACE@2081..2082 " "
      TABLE_CELL@2082..2085
        TEXT@2082..2085 "Gas"
      WHITESPACE@2085..2089 "    "
      TEXT@2089..2090 "|"
      WHITESPACE@2090..2091 " "
      TABLE_CELL@2091..2098
        TEXT@2091..2098 "Jupiter"
      WHITESPACE@2098..2099 " "
      TEXT@2099..2100 "|"
      WHITESPACE@2100..2101 " "
      TABLE_CELL@2101..2105
        TEXT@2101..2105 "1898"
      WHITESPACE@2105..2112 "       "
      TEXT@2112..2113 "|"
      WHITESPACE@2113..2114 " "
      TABLE_CELL@2114..2121
        TEXT@2114..2121 "142,984"
      WHITESPACE@2121..2123 "  "
      TEXT@2123..2124 "|"
      WHITESPACE@2124..2125 " "
      TABLE_CELL@2125..2129
        TEXT@2125..2129 "1326"
      WHITESPACE@2129..2135 "      "
      TEXT@2135..2136 "|"
      WHITESPACE@2136..2137 " "
      TABLE_CELL@2137..2141
        TEXT@2137..2141 "23.1"
      WHITESPACE@2141..2146 "     "
      TEXT@2146..2147 "|"
      WHITESPACE@2147..2148 " "
      TABLE_CELL@2148..2151
        TEXT@2148..2151 "9.9"
      WHITESPACE@2151..2156 "     "
      TEXT@2156..2157 "|"
      WHITESPACE@2157..2158 " "
      TABLE_CELL@2158..2163
        TEXT@2158..2163 "778.6"
      WHITESPACE@2163..2168 "     "
      TEXT@2168..2169 "|"
      WHITESPACE@2169..2170 " "
      TABLE_CELL@2170..2174
        TEXT@2170..2174 "-110"
      WHITESPACE@2174..2182 "        "
      TEXT@2182..2183 "|"
      WHITESPACE@2183..2184 " "
      TABLE_CELL@2184..2186
        TEXT@2184..2186 "67"
      WHITESPACE@2186..2191 "     "
      TEXT@2191..2192 "|"
      WHITESPACE@2192..2193 " "
      TABLE_CELL@2193..2204
        TEXT@2193..2204 "The largest"
      WHITESPACE@2204..2206 "  "
      TEXT@2206..2207 "|"
      NEWLINE@2207..2208 "\n"
      TEXT@2208..2345 "| planets | giants |  ..."
      NEWLINE@2345..2346 "\n"
      TEXT@2346..2483 "|         |        +- ..."
      NEWLINE@2483..2484 "\n"
      TEXT@2484..2621 "|         |        |  ..."
      NEWLINE@2621..2622 "\n"
      TEXT@2622..2759 "|         +--------+- ..."
      NEWLINE@2759..2760 "\n"
      TEXT@2760..2897 "|         | Ice    |  ..."
      NEWLINE@2897..2898 "\n"
      TEXT@2898..3035 "|         | giants |  ..."
      NEWLINE@3035..3036 "\n"
      TEXT@3036..3173 "|         |        +- ..."
      NEWLINE@3173..3174 "\n"
      TEXT@3174..3311 "|         |        |  ..."
      NEWLINE@3311..3312 "\n"
    TABLE_SEPARATOR@3312..3450
      TABLE_SEP_DELIM@3312..3313 "+"
      TABLE_SEP_DASHES@3313..3322 "---------"
      TABLE_SEP_DELIM@3322..3323 "+"
      TABLE_SEP_DASHES@3323..3331 "--------"
      TABLE_SEP_DELIM@3331..3332 "+"
      TABLE_SEP_DASHES@3332..3341 "---------"
      TABLE_SEP_DELIM@3341..3342 "+"
      TABLE_SEP_DASHES@3342..3354 "------------"
      TABLE_SEP_DELIM@3354..3355 "+"
      TABLE_SEP_DASHES@3355..3365 "----------"
      TABLE_SEP_DELIM@3365..3366 "+"
      TABLE_SEP_DASHES@3366..3377 "-----------"
      TABLE_SEP_DELIM@3377..3378 "+"
      TABLE_SEP_DASHES@3378..3388 "----------"
      TABLE_SEP_DELIM@3388..3389 "+"
      TABLE_SEP_DASHES@3389..3398 "---------"
      TABLE_SEP_DELIM@3398..3399 "+"
      TABLE_SEP_DASHES@3399..3410 "-----------"
      TABLE_SEP_DELIM@3410..3411 "+"
      TABLE_SEP_DASHES@3411..3424 "-------------"
      TABLE_SEP_DELIM@3424..3425 "+"
      TABLE_SEP_DASHES@3425..3433 "--------"
      TABLE_SEP_DELIM@3433..3434 "+"
      TABLE_SEP_DASHES@3434..3448 "--------------"
      TABLE_SEP_DELIM@3448..3449 "+"
      NEWLINE@3449..3450 "\n"
    TABLE_ROW@3450..3864
      TEXT@3450..3451 "|"
      WHITESPACE@3451..3452 " "
      TABLE_CELL@3452..3465
        TEXT@3452..3465 "Dwarf planets"
      WHITESPACE@3465..3469 "    "
      TEXT@3469..3470 "|"
      WHITESPACE@3470..3471 " "
      TABLE_CELL@3471..3476
        TEXT@3471..3476 "Pluto"
      WHITESPACE@3476..3479 "   "
      TEXT@3479..3480 "|"
      WHITESPACE@3480..3481 " "
      TABLE_CELL@3481..3487
        TEXT@3481..3487 "0.0146"
      WHITESPACE@3487..3492 "     "
      TEXT@3492..3493 "|"
      WHITESPACE@3493..3494 " "
      TABLE_CELL@3494..3499
        TEXT@3494..3499 "2,370"
      WHITESPACE@3499..3503 "    "
      TEXT@3503..3504 "|"
      WHITESPACE@3504..3505 " "
      TABLE_CELL@3505..3509
        TEXT@3505..3509 "2095"
      WHITESPACE@3509..3515 "      "
      TEXT@3515..3516 "|"
      WHITESPACE@3516..3517 " "
      TABLE_CELL@3517..3520
        TEXT@3517..3520 "0.7"
      WHITESPACE@3520..3526 "      "
      TEXT@3526..3527 "|"
      WHITESPACE@3527..3528 " "
      TABLE_CELL@3528..3533
        TEXT@3528..3533 "153.3"
      WHITESPACE@3533..3536 "   "
      TEXT@3536..3537 "|"
      WHITESPACE@3537..3538 " "
      TABLE_CELL@3538..3544
        TEXT@3538..3544 "5906.4"
      WHITESPACE@3544..3548 "    "
      TEXT@3548..3549 "|"
      WHITESPACE@3549..3550 " "
      TABLE_CELL@3550..3554
        TEXT@3550..3554 "-225"
      WHITESPACE@3554..3562 "        "
      TEXT@3562..3563 "|"
      WHITESPACE@3563..3564 " "
      TABLE_CELL@3564..3565
        TEXT@3564..3565 "5"
      WHITESPACE@3565..3571 "      "
      TEXT@3571..3572 "|"
      WHITESPACE@3572..3573 " "
      TABLE_CELL@3573..3585
        TEXT@3573..3585 "Declassified"
      WHITESPACE@3585..3586 " "
      TEXT@3586..3587 "|"
      NEWLINE@3587..3588 "\n"
      TEXT@3588..3725 "|                  |  ..."
      NEWLINE@3725..3726 "\n"
      TEXT@3726..3863 "|                  |  ..."
      NEWLINE@3863..3864 "\n"
    TABLE_SEPARATOR@3864..4002
      TABLE_SEP_DELIM@3864..3865 "+"
      TABLE_SEP_DASHES@3865..3883 "------------------"
      TABLE_SEP_DELIM@3883..3884 "+"
      TABLE_SEP_DASHES@3884..3893 "---------"
      TABLE_SEP_DELIM@3893..3894 "+"
      TABLE_SEP_DASHES@3894..3906 "------------"
      TABLE_SEP_DELIM@3906..3907 "+"
      TABLE_SEP_DASHES@3907..3917 "----------"
      TABLE_SEP_DELIM@3917..3918 "+"
      TABLE_SEP_DASHES@3918..3929 "-----------"
      TABLE_SEP_DELIM@3929..3930 "+"
      TABLE_SEP_DASHES@3930..3940 "----------"
      TABLE_SEP_DELIM@3940..3941 "+"
      TABLE_SEP_DASHES@3941..3950 "---------"
      TABLE_SEP_DELIM@3950..3951 "+"
      TABLE_SEP_DASHES@3951..3962 "-----------"
      TABLE_SEP_DELIM@3962..3963 "+"
      TABLE_SEP_DASHES@3963..3976 "-------------"
      TABLE_SEP_DELIM@3976..3977 "+"
      TABLE_SEP_DASHES@3977..3985 "--------"
      TABLE_SEP_DELIM@3985..3986 "+"
      TABLE_SEP_DASHES@3986..4000 "--------------"
      TABLE_SEP_DELIM@4000..4001 "+"
      NEWLINE@4001..4002 "\n"
    BLANK_LINE@4002..4003
      BLANK_LINE@4002..4003 "\n"
    TABLE_CAPTION@4003..4049
      TABLE_CAPTION_PREFIX@4003..4005 ": "
      TEXT@4005..4048 "Data about the planet ..."
      NEWLINE@4048..4049 "\n"
