crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_headings.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..529
  HEADING@0..17
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..16
      TEXT@2..16 "Simple Heading"
    NEWLINE@16..17 "\n"
  BLANK_LINE@17..18
    BLANK_LINE@17..18 "\n"
  HEADING@18..45
    ATX_HEADING_MARKER@18..20
      ATX_HEADING_MARKER@18..20 "##"
    WHITESPACE@20..21 " "
    HEADING_CONTENT@21..44
      TEXT@21..34 "Heading with "
      EMPHASIS@34..44
        EMPHASIS_MARKER@34..35 "*"
        TEXT@35..43 "emphasis"
        EMPHASIS_MARKER@43..44 "*"
    NEWLINE@44..45 "\n"
  BLANK_LINE@45..46
    BLANK_LINE@45..46 "\n"
  HEADING@46..83
    ATX_HEADING_MARKER@46..49
      ATX_HEADING_MARKER@46..49 "###"
    WHITESPACE@49..50 " "
    HEADING_CONTENT@50..82
      TEXT@50..63 "Heading with "
      STRONG@63..82
        STRONG_MARKER@63..65 "**"
        TEXT@65..80 "strong emphasis"
        STRONG_MARKER@80..82 "**"
    NEWLINE@82..83 "\n"
  BLANK_LINE@83..84
    BLANK_LINE@83..84 "\n"
  HEADING@84..109
    ATX_HEADING_MARKER@84..88
      ATX_HEADING_MARKER@84..88 "####"
    WHITESPACE@88..89 " "
    HEADING_CONTENT@89..108
      TEXT@89..102 "Heading with "
      INLINE_CODE@102..108
        INLINE_CODE_MARKER@102..103 "`"
        INLINE_CODE_CONTENT@103..107 "code"
        INLINE_CODE_MARKER@107..108 "`"
    NEWLINE@108..109 "\n"
  BLANK_LINE@109..110
    BLANK_LINE@109..110 "\n"
  HEADING@110..157
    ATX_HEADING_MARKER@110..115
      ATX_HEADING_MARKER@110..115 "#####"
    WHITESPACE@115..116 " "
    HEADING_CONTENT@116..156
      TEXT@116..129 "Heading with "
      LINK@129..156
        LINK_START@129..130
          LINK_START@129..130 "["
        LINK_TEXT@130..134
          TEXT@130..134 "link"
        LINK_TEXT_END@134..135 "]"
        LINK_DEST_START@135..136 "("
        LINK_DEST@136..155
          TEXT@136..155 "https://example.com"
        LINK_DEST_END@155..156 ")"
    NEWLINE@156..157 "\n"
  BLANK_LINE@157..158
    BLANK_LINE@157..158 "\n"
  HEADING@158..207
    ATX_HEADING_MARKER@158..164
      ATX_HEADING_MARKER@158..164 "######"
    WHITESPACE@164..165 " "
    HEADING_CONTENT@165..206
      TEXT@165..178 "Heading with "
      EMPHASIS@178..206
        EMPHASIS_MARKER@178..179 "*"
        TEXT@179..186 "nested "
        STRONG@186..196
          STRONG_MARKER@186..188 "**"
          TEXT@188..194 "strong"
          STRONG_MARKER@194..196 "**"
        TEXT@196..205 " emphasis"
        EMPHASIS_MARKER@205..206 "*"
    NEWLINE@206..207 "\n"
  BLANK_LINE@207..208
    BLANK_LINE@207..208 "\n"
  HEADING@208..267
    ATX_HEADING_MARKER@208..209
      ATX_HEADING_MARKER@208..209 "#"
    WHITESPACE@209..210 " "
    HEADING_CONTENT@210..266
      TEXT@210..232 "Heading with multiple "
      EMPHASIS@232..242
        EMPHASIS_MARKER@232..233 "*"
        TEXT@233..241 "emphasis"
        EMPHASIS_MARKER@241..242 "*"
      TEXT@242..247 " and "
      STRONG@247..257
        STRONG_MARKER@247..249 "**"
        TEXT@249..255 "strong"
        STRONG_MARKER@255..257 "**"
      TEXT@257..266 " elements"
    NEWLINE@266..267 "\n"
  BLANK_LINE@267..268
    BLANK_LINE@267..268 "\n"
  HEADING@268..306
    ATX_HEADING_MARKER@268..270
      ATX_HEADING_MARKER@268..270 "##"
    WHITESPACE@270..271 " "
    HEADING_CONTENT@271..305
      TEXT@271..284 "Heading with "
      INLINE_CODE@284..290
        INLINE_CODE_MARKER@284..285 "`"
        INLINE_CODE_CONTENT@285..289 "code"
        INLINE_CODE_MARKER@289..290 "`"
      TEXT@290..295 " and "
      EMPHASIS@295..305
        EMPHASIS_MARKER@295..296 "*"
        TEXT@296..304 "emphasis"
        EMPHASIS_MARKER@304..305 "*"
    NEWLINE@305..306 "\n"
  BLANK_LINE@306..307
    BLANK_LINE@306..307 "\n"
  HEADING@307..338
    ATX_HEADING_MARKER@307..310
      ATX_HEADING_MARKER@307..310 "###"
    WHITESPACE@310..311 " "
    HEADING_CONTENT@311..337
      TEXT@311..324 "Heading with "
      STRIKEOUT@324..337
        STRIKEOUT_MARKER@324..326
          STRIKEOUT_MARKER@324..326 "~~"
        TEXT@326..335 "strikeout"
        STRIKEOUT_MARKER@335..337
          STRIKEOUT_MARKER@335..337 "~~"
    NEWLINE@337..338 "\n"
  BLANK_LINE@338..339
    BLANK_LINE@338..339 "\n"
  HEADING@339..387
    ATX_HEADING_MARKER@339..343
      ATX_HEADING_MARKER@339..343 "####"
    WHITESPACE@343..344 " "
    HEADING_CONTENT@344..386
      TEXT@344..362 "Heading with super"
      SUPERSCRIPT@362..370
        SUPERSCRIPT_MARKER@362..363
          SUPERSCRIPT_MARKER@362..363 "^"
        TEXT@363..369 "script"
        SUPERSCRIPT_MARKER@369..370
          SUPERSCRIPT_MARKER@369..370 "^"
      TEXT@370..378 " and sub"
      SUBSCRIPT@378..386
        SUBSCRIPT_MARKER@378..379
          SUBSCRIPT_MARKER@378..379 "~"
        TEXT@379..385 "script"
        SUBSCRIPT_MARKER@385..386
          SUBSCRIPT_MARKER@385..386 "~"
    NEWLINE@386..387 "\n"
  BLANK_LINE@387..388
    BLANK_LINE@387..388 "\n"
  HEADING@388..426
    ATX_HEADING_MARKER@388..389
      ATX_HEADING_MARKER@388..389 "#"
    WHITESPACE@389..390 " "
    HEADING_CONTENT@390..413
      TEXT@390..413 "Heading with attributes"
    ATTRIBUTE@413..425
      ATTRIBUTE@413..425 "{#custom-id}"
    NEWLINE@425..426 "\n"
  BLANK_LINE@426..427
    BLANK_LINE@426..427 "\n"
  HEADING@427..474
    ATX_HEADING_MARKER@427..429
      ATX_HEADING_MARKER@427..429 "##"
    WHITESPACE@429..430 " "
    HEADING_CONTENT@430..450
      TEXT@430..450 "Heading with classes"
    ATTRIBUTE@450..473
      ATTRIBUTE@450..473 "{.important .highlight}"
    NEWLINE@473..474 "\n"
  BLANK_LINE@474..475
    BLANK_LINE@474..475 "\n"
  HEADING@475..515
    ATX_HEADING_MARKER@475..478
      ATX_HEADING_MARKER@475..478 "###"
    WHITESPACE@478..479 " "
    HEADING_CONTENT@479..501
      TEXT@479..501 "Heading with key-value"
    ATTRIBUTE@501..514
      ATTRIBUTE@501..514 "{width=\"100\"}"
    NEWLINE@514..515 "\n"
  BLANK_LINE@515..516
    BLANK_LINE@515..516 "\n"
  HEADING@516..529
    ATX_HEADING_MARKER@516..517
      ATX_HEADING_MARKER@516..517 "#"
    WHITESPACE@517..518 " "
    HEADING_CONTENT@518..522
      TEXT@518..522 "Test"
    WHITESPACE@522..523 " "
    ATTRIBUTE@523..528
      ATTRIBUTE@523..528 "{#id}"
    NEWLINE@528..529 "\n"
