crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_horizontal_rules.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..263
  PARAGRAPH@0..28
    TEXT@0..27 "First section with co ..."
    NEWLINE@27..28 "\n"
  BLANK_LINE@28..29
    BLANK_LINE@28..29 "\n"
  HORIZONTAL_RULE@29..33
    HORIZONTAL_RULE@29..32 "***"
    NEWLINE@32..33 "\n"
  BLANK_LINE@33..34
    BLANK_LINE@33..34 "\n"
  PARAGRAPH@34..71
    TEXT@34..70 "Second section with d ..."
    NEWLINE@70..71 "\n"
  BLANK_LINE@71..72
    BLANK_LINE@71..72 "\n"
  HORIZONTAL_RULE@72..82
    HORIZONTAL_RULE@72..81 "- - - - -"
    NEWLINE@81..82 "\n"
  BLANK_LINE@82..83
    BLANK_LINE@82..83 "\n"
  PARAGRAPH@83..115
    TEXT@83..114 "Third section with un ..."
    NEWLINE@114..115 "\n"
  BLANK_LINE@115..116
    BLANK_LINE@115..116 "\n"
  HORIZONTAL_RULE@116..122
    HORIZONTAL_RULE@116..121 "_____"
    NEWLINE@121..122 "\n"
  BLANK_LINE@122..123
    BLANK_LINE@122..123 "\n"
  BLOCK_QUOTE@123..172
    BLOCK_QUOTE_MARKER@123..124 ">"
    WHITESPACE@124..125 " "
    PARAGRAPH@125..143
      TEXT@125..142 "Quote before rule"
      NEWLINE@142..143 "\n"
    BLOCK_QUOTE_MARKER@143..144 ">"
    BLANK_LINE@144..145
      BLANK_LINE@144..145 "\n"
    BLOCK_QUOTE_MARKER@145..146 ">"
    WHITESPACE@146..147 " "
    HORIZONTAL_RULE@147..151
      HORIZONTAL_RULE@147..150 "***"
      NEWLINE@150..151 "\n"
    BLOCK_QUOTE_MARKER@151..152 ">"
    BLANK_LINE@152..153
      BLANK_LINE@152..153 "\n"
    BLOCK_QUOTE_MARKER@153..154 ">"
    WHITESPACE@154..155 " "
    PARAGRAPH@155..172
      TEXT@155..171 "Quote after rule"
      NEWLINE@171..172 "\n"
  BLANK_LINE@172..173
    BLANK_LINE@172..173 "\n"
  PARAGRAPH@173..190
    TEXT@173..189 "Final paragraph."
    NEWLINE@189..190 "\n"
  BLANK_LINE@190..191
    BLANK_LINE@190..191 "\n"
  PARAGRAPH@191..217
    TEXT@191..216 "Here's a horizontal r ..."
    NEWLINE@216..217 "\n"
  BLANK_LINE@217..218
    BLANK_LINE@217..218 "\n"
  HORIZONTAL_RULE@218..222
    HORIZONTAL_RULE@218..221 "---"
    NEWLINE@221..222 "\n"
  PARAGRAPH@222..263
    TEXT@222..262 "Text directly after t ..."
    NEWLINE@262..263 "\n"
