crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_hr_as_list_item_content_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..14
  LIST@0..14
    LIST_ITEM@0..6
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..6
        TEXT@2..5 "Foo"
        NEWLINE@5..6 "\n"
    LIST_ITEM@6..14
      LIST_MARKER@6..7 "-"
      WHITESPACE@7..8 " "
      HORIZONTAL_RULE@8..14
        HORIZONTAL_RULE@8..13 "* * *"
        NEWLINE@13..14 "\n"
