crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_hr_closes_list_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..16
  LIST@0..16
    LIST_ITEM@0..10
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..10
        TEXT@2..5 "foo"
        NEWLINE@5..6 "\n"
        TEXT@6..9 "***"
        NEWLINE@9..10 "\n"
    LIST_ITEM@10..16
      LIST_MARKER@10..11 "-"
      WHITESPACE@11..12 " "
      PLAIN@12..16
        TEXT@12..15 "bar"
        NEWLINE@15..16 "\n"
