crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_hr_interrupts_lazy_blockquote_paragraph_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..16
  BLOCK_QUOTE@0..6
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    PARAGRAPH@2..6
      TEXT@2..5 "aaa"
      NEWLINE@5..6 "\n"
  HORIZONTAL_RULE@6..10
    HORIZONTAL_RULE@6..9 "***"
    NEWLINE@9..10 "\n"
  BLOCK_QUOTE@10..16
    BLOCK_QUOTE_MARKER@10..11 ">"
    WHITESPACE@11..12 " "
    PARAGRAPH@12..16
      TEXT@12..15 "bbb"
      NEWLINE@15..16 "\n"
