crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..342
  HEADING@0..18
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..17
      TEXT@2..17 "HTML Block Test"
    NEWLINE@17..18 "\n"
  BLANK_LINE@18..19
    BLANK_LINE@18..19 "\n"
  PARAGRAPH@19..59
    TEXT@19..58 "This document tests H ..."
    NEWLINE@58..59 "\n"
  BLANK_LINE@59..60
    BLANK_LINE@59..60 "\n"
  HTML_BLOCK@60..82
    HTML_BLOCK_TAG@60..82
      TEXT@60..81 "<!-- HTML comment -->"
      NEWLINE@81..82 "\n"
  BLANK_LINE@82..83
    BLANK_LINE@82..83 "\n"
  PARAGRAPH@83..108
    TEXT@83..107 "Some text after comment."
    NEWLINE@107..108 "\n"
  BLANK_LINE@108..109
    BLANK_LINE@108..109 "\n"
  HTML_BLOCK_DIV@109..159
    HTML_BLOCK_TAG@109..133
      TEXT@109..113 "<div"
      WHITESPACE@113..114 " "
      HTML_ATTRS@114..131
        TEXT@114..131 "class=\"container\""
      TEXT@131..132 ">"
      NEWLINE@132..133 "\n"
    PARAGRAPH@133..152
      TEXT@133..151 "Content inside div"
      NEWLINE@151..152 "\n"
    HTML_BLOCK_TAG@152..159
      TEXT@152..158 "</div>"
      NEWLINE@158..159 "\n"
  BLANK_LINE@159..160
    BLANK_LINE@159..160 "\n"
  PARAGRAPH@160..181
    TEXT@160..180 "Paragraph after div."
    NEWLINE@180..181 "\n"
  BLANK_LINE@181..182
    BLANK_LINE@181..182 "\n"
  HTML_BLOCK@182..238
    HTML_BLOCK_TAG@182..191
      TEXT@182..190 "<script>"
      NEWLINE@190..191 "\n"
    HTML_BLOCK_CONTENT@191..228
      TEXT@191..206 "alert('Hello');"
      NEWLINE@206..207 "\n"
      TEXT@207..227 "console.log('test');"
      NEWLINE@227..228 "\n"
    HTML_BLOCK_TAG@228..238
      TEXT@228..237 "</script>"
      NEWLINE@237..238 "\n"
  BLANK_LINE@238..239
    BLANK_LINE@238..239 "\n"
  PARAGRAPH@239..256
    TEXT@239..255 "Final paragraph."
    NEWLINE@255..256 "\n"
  BLANK_LINE@256..257
    BLANK_LINE@256..257 "\n"
  HTML_BLOCK@257..299
    HTML_BLOCK_TAG@257..262
      TEXT@257..261 "<!--"
      NEWLINE@261..262 "\n"
    HTML_BLOCK_CONTENT@262..295
      TEXT@262..288 "Html comment with mul ..."
      NEWLINE@288..289 "\n"
      TEXT@289..294 "lines"
      NEWLINE@294..295 "\n"
    HTML_BLOCK_TAG@295..299
      TEXT@295..298 "-->"
      NEWLINE@298..299 "\n"
  BLANK_LINE@299..300
    BLANK_LINE@299..300 "\n"
  HTML_BLOCK@300..342
    HTML_BLOCK_TAG@300..305
      TEXT@300..304 "<!--"
      NEWLINE@304..305 "\n"
    HTML_BLOCK_CONTENT@305..338
      TEXT@305..337 "    This is an indent ..."
      NEWLINE@337..338 "\n"
    HTML_BLOCK_TAG@338..342
      TEXT@338..341 "-->"
      NEWLINE@341..342 "\n"
